Revision history for VCtools

0.15
	*	bug fixes:
		`vc commands` no longer has "FILL ME IN" for some commands

0.14	2014-04-27		10aefe9b72

	*	bug fixes:
		`vc help` with no args now works properly again
	*	new global switches:
		--yes
	*	new commands:
		vc unbranch
		vc commit-fix
		vc shell-complete
	*	modified global switches:
		--pretend: when `verify = clean` fails, only print a message, don't actually exit
	*	modified commands:
		vc commit -F : same as `vc commit-fix`
		vc commands : much more consistent about what commands are listed
		vc commands : also more consistent about what commands are "structural"
		vc info : fixed help message
		vc info : now consistenly using newlines for separators; added `--oneline` switch to use spaces instead
	*	modified Git implementions:
		%staged_files : consider additions and deletions as well as mods
		vc unstage : no longer throws bogus error
		vc resolved : now actually works
	*	new %info methods:
		%me
	*	base command improvements:
		added version variable for `vc version` or `--version` switch
			(assuming new enough version of App::Cmd)
	*	code expansion improvements
		now easier to call confirm() to make a custom prompt
			(ex: `BAIL=$self->confirm("Do you want to quit now?")` / `$BAIL -> ! Bailing.`)
	*	doc improvements:
		better help for `vc stash` and `vc unstash`
		fixed reference to "white" in the action cheatsheet

0.13	2014-01-23		e2af02f2c5

	*	bug fixes:
		no longer get errors for using the same ArrayRef %info method twice in one command
	*	base command improvements:
		now printing "recovery commands" when a command fails
	*	new commands:
		vc stash
		vc unstash
		vc unstage
		vc push
	*	modified commands:
		vc info: no longer using commas to separate elements in ArrayRef %info methods
		vc self-upgrade: can upgrade a Perl prereq
	*	new %info methods:
		%staged_files
	*	modified action directives:
		code: now using { } (@ is informally deprecated)
	*	custom command improvements: