@@ -79,7 +79,8 @@
 
 		unstage <<---
 			# for some reason, git reset HEAD always returns 1 instead of 0 ...
-			git reset HEAD %staged_files || :
+			%files  -> git reset HEAD %files || :
+			!%files -> git reset HEAD %staged_files || :
 		---
 
 		unget <<---
